# goodwe-control

./: .pre-commit-config.yaml  BRAND_RULES.md  CHANGELOG.md  CLAUDE.md  README.md  hacs.json  pyproject.toml  repository.yaml
.githooks/: check-module-size  pre-commit  pre-push
.github/workflows/: addon.yml  drift.yml  hacs.yml  hassfest.yml  lint.yml  release.yml
.semgrep/: goodwe-architecture.yaml
custom_components/goodwe_battery_control/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/goodwe_battery_control/smart_battery/: __init__.py  adapter.py  algorithms.py  config_flow_base.py  const.py  coordinator.py  domain_data.py  listeners.py  logging.py  sensor_base.py  services.py  session.py  taper.py  types.py
custom_components/goodwe_battery_control/translations/: de.json  en.json  es.json  fr.json  it.json  ja.json  nl.json  pl.json  pt.json  zh-Hans.json
custom_components/goodwe_battery_control/www/: goodwe-control-card.js  goodwe-overview-card.js
goodwe-control/: DOCS.md  Dockerfile  apparmor.txt  config.yaml  run.sh
scripts/: sync_smart_battery.sh
tests/: conftest.py  test_adapter.py  test_brand_rules.py  test_coordinator.py  test_sensor.py  test_services.py
